--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Mate+SC&display=swap');
+@import url(//fonts.googleapis.com/css2?family=Julius+Sans+One&family=Mate+SC&display=swap);
 
 @tailwind base;
 @tailwind components;
