--- a/app/globals.scss
+++ b/app/globals.scss
@@ -52,6 +52,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+  width: 100%;
   opacity: 80%;
   display: flex;
   font-family: $section-fonts;
@@ -144,7 +145,8 @@ header {
     justify-content: center;
 
     .column {
-      width: 42%;
+      flex: 1;
+      padding: 4%;
 
 
       h3 {
@@ -171,7 +173,7 @@ header {
   }
 
   .desc-container {
-    width: 80%;
+    width: 85%;
     height: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -184,14 +186,14 @@ header {
     transition: transform 500ms ease-in-out;
 
     .desc-info {
-      width: 50%;
+      flex: 1;
       padding: 2rem;
 
       a {
         padding: 10px;
         margin: 10px;
-        background-color: #f0f0f0;
-        border-radius: 5px;
+        background-color: #f6f4f4;
+        border-radius: 15px 15px 15px 0;
       }
     }
 
@@ -317,4 +319,48 @@ footer {
   background-position: center;
   background-size: cover;
   height: 150px;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-section {
+    height: 30vh;
+    flex-direction: column;
+    justify-content: space-between;
+
+    header {
+      margin: 20px auto;
+    }
+
+    .portfolio-text {
+      font-size: 2rem;
+    }
+  }
+
+  .about-me-section {
+    .container {
+      flex-direction: column;
+
+      .info {
+        width: 98%;
+      }
+    }
+
+    .cv-info {
+      flex-direction: column;
+      
+
+      .column {
+        width: 100%;
+      }
+    }
+  }
+
+  .project-section {
+    .desc-link {
+      position: absolute;
+      opacity: 0.1;
+      width: 85%;
+    }
+  }
+
 }
