--- a/app/globals.scss
+++ b/app/globals.scss
@@ -175,7 +175,8 @@ header {
   .desc-container {
     width: 85%;
     height: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     justify-content: space-evenly;
     align-items: center;
     border-radius: 5px;
@@ -187,13 +188,35 @@ header {
 
     .desc-info {
       flex: 1;
+
       padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      margin: 0;
 
       a {
-        padding: 10px;
+        padding: 15px;
         margin: 10px;
         background-color: #f6f4f4;
-        border-radius: 15px 15px 15px 0;
+        border-radius: 20px 0 20px 0;
+      }
+
+      a:hover {
+        border-radius: 20px;
+      }
+
+      div {
+        margin: 30px;
+
+        .labels {
+          background-color: $primary-color;
+          color: $section-gray-color;
+          display: inline-block;
+          margin: 5px;
+          padding: 5px 10px;
+          border-radius: 15px;
+        }
       }
     }
 
@@ -222,7 +245,7 @@ header {
   }
 
   .desc-container:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 }
 
