--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Mate&display=swap');
+@import url(//fonts.googleapis.com/css2?family=Julius+Sans+One&family=Mate&display=swap);
 
 @tailwind base;
 @tailwind components;
