--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -41,10 +41,8 @@ header {
   width: 100%;
   opacity: 80%;
   display: flex;
-  font-family: $section-fonts;
 
   .portfolio-text {
-    font-family: 'Julius Sans One', sans-serif;
     font-size: 7rem;
     font-weight: 600;
     align-self: center;
@@ -54,7 +52,6 @@ header {
 }
 
 .about-me-section {
-  font-family: $section-fonts;
   font-size: 1.4rem;
   padding: 1em;
   height: 100%;
@@ -164,6 +161,7 @@ header {
     height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    font-size: 1.25rem;
     justify-content: space-evenly;
     align-items: center;
     border-radius: 5px;
