--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -37,13 +37,13 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 300px;
   width: 100%;
   opacity: 80%;
   display: flex;
 
   .portfolio-text {
-    font-size: 7rem;
+    font-size: 4rem;
     font-weight: 600;
     align-self: center;
     justify-self: center;
@@ -124,7 +124,9 @@ header {
   }
 
   .cv-info {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 50px;
     justify-content: center;
 
     .column {
@@ -245,7 +247,7 @@ header {
 
 .waves {
   position: absolute;
-  bottom: 0;
+  top: 220px;
   left: 0;
   width: 100%;
   height: 15vh;
